package team16.easytracker

import android.app.Activity
import androidx.test.espresso.Espresso.closeSoftKeyboard
import androidx.test.espresso.Espresso.onView
import androidx.test.espresso.action.ViewActions.*
import androidx.test.espresso.assertion.ViewAssertions.matches
import androidx.test.espresso.matcher.ViewMatchers.*
import androidx.test.ext.junit.rules.ActivityScenarioRule
import androidx.test.ext.junit.runners.AndroidJUnit4
import androidx.test.platform.app.InstrumentationRegistry.getInstrumentation
import androidx.test.runner.lifecycle.ActivityLifecycleMonitorRegistry
import androidx.test.runner.lifecycle.Stage
import org.hamcrest.CoreMatchers.not
import org.junit.*
import org.junit.runner.RunWith
import team16.easytracker.database.DbHelper
import java.time.LocalDate
import java.time.LocalDateTime

@RunWith(AndroidJUnit4::class)
class CreateCompanyTests : TestFramework() {


    @Before
    override fun setup() {
        super.setup()
        setupLoggedInWorker()
    }


    @get:Rule
    val activityRule = ActivityScenarioRule(HomeActivity::class.java)

    fun getCurrentActivity(): Activity {
        var currentActivity: Activity? = null
        getInstrumentation().runOnMainSync { run { currentActivity =
            ActivityLifecycleMonitorRegistry.getInstance().getActivitiesInStage(Stage.RESUMED)
                .elementAtOrNull(0)
        }
        }
        return currentActivity!!
    }

    fun openFragment() {
        val activity = getCurrentActivity() as HomeActivity
        val transaction = activity.supportFragmentManager.beginTransaction()
        transaction.replace(R.id.flFragment, CreateCompanyFragment())
        transaction.disallowAddToBackStack()
        transaction.commit()
    }

    @Test
    fun testOpenFragment() {
        openFragment()
        onView(withId(R.id.clFragmentCreateCompany)).check(matches((isDisplayed())))
    }

    @Test
    fun errorsHiddenOnStart() {
        openFragment()
        // Error textviews should not be visible before clicking registration button
        onView(withId(R.id.tvErrorCompanyName))
            .check(matches(not(isDisplayed())))

        onView(withId(R.id.tvErrorCompanyPosition))
            .check(matches(not(isDisplayed())))

        onView(withId(R.id.tvErrorPostCode))
            .check(matches(not(isDisplayed())))

        onView(withId(R.id.tvErrorCity))
            .check(matches(not(isDisplayed())))

        onView(withId(R.id.tvErrorStreet))
            .check(matches(not(isDisplayed())))
    }

    @Test
    fun emptyInputData() {

        openFragment()

        // Click registration button without any data entered
        onView(withId(R.id.btnCreateCompany))
            .perform(scrollTo(), click())

        // Most error textviews should now be visible
        onView(withId(R.id.tvErrorCompanyName))
            .check(matches(isDisplayed()))
            .check(matches(withText(R.string.company_name_required)))

        onView(withId(R.id.tvErrorCompanyPosition))
            .check(matches(isDisplayed()))
            .check(matches(withText(R.string.position_required)))

        onView(withId(R.id.tvErrorPostCode))
            .check(matches(isDisplayed()))
            .check(matches(withText(R.string.post_code_required)))

        onView(withId(R.id.tvErrorCity))
            .check(matches(isDisplayed()))
            .check(matches(withText(R.string.city_required)))

        onView(withId(R.id.tvErrorStreet))
            .check(matches(isDisplayed()))
            .check(matches(withText(R.string.street_required)))
    }

    @Test
    fun invalidInputDataTooShort() {
        openFragment()

        // type too short company name
        onView(withId(R.id.etCompanyName))
            .perform(scrollTo(), typeText("A"))

        // type too short company position
        onView(withId(R.id.etCompanyPosition))
            .perform(scrollTo(), typeText("A"))

        // type too short postal code
        onView(withId(R.id.etPostCode))
            .perform(scrollTo(), typeText("A"))

        // type too short city
        onView(withId(R.id.etCity))
            .perform(scrollTo(), typeText("A"))

        // type Street without nr/street name (only 1 word)
        onView(withId(R.id.etStreet))
            .perform(scrollTo(), typeText("Street"))

        closeSoftKeyboard()

        // Click registration button
        val btn = withId(R.id.btnCreateCompany)
        onView(btn).perform(scrollTo(), click())

        // check if error messages are correct
        onView(withId(R.id.tvErrorCompanyName))
            .check(matches(isDisplayed()))
            .check(matches(withText(R.string.company_name_length)))

        onView(withId(R.id.tvErrorCompanyPosition))
            .check(matches(isDisplayed()))
            .check(matches(withText(R.string.position_name_length)))

        onView(withId(R.id.tvErrorPostCode))
            .check(matches(isDisplayed()))
            .check(matches(withText(R.string.post_code_length)))

        onView(withId(R.id.tvErrorCity))
            .check(matches(isDisplayed()))
            .check(matches(withText(R.string.city_name_length)))

        onView(withId(R.id.tvErrorStreet))
            .check(matches(isDisplayed()))
            .check(matches(withText(R.string.street_name_format)))

    }

    @Test
    fun invalidInputDataTooLong() {
        openFragment()

        val characterLimit = 255
        val characterLimitPostalCode = 10

        // type too long company name
        onView(withId(R.id.etCompanyName))
            .perform(scrollTo(), typeText("a".repeat(characterLimit + 1)))

        // type too long company position
        onView(withId(R.id.etCompanyPosition))
            .perform(scrollTo(), typeText("a".repeat(characterLimit + 1)))

        // type too long postal code
        onView(withId(R.id.etPostCode))
            .perform(scrollTo(), typeText("a".repeat(characterLimitPostalCode + 1)))

        // type too long city
        onView(withId(R.id.etCity))
            .perform(scrollTo(), typeText("a".repeat(characterLimit + 1)))

        closeSoftKeyboard()

        // Click registration button
        val btn = withId(R.id.btnCreateCompany)
        onView(btn).perform(scrollTo(), click())

        // check if error messages are correct
        onView(withId(R.id.tvErrorCompanyName))
            .check(matches(isDisplayed()))
            .check(matches(withText(R.string.company_name_length)))

        onView(withId(R.id.tvErrorCompanyPosition))
            .check(matches(isDisplayed()))
            .check(matches(withText(R.string.position_name_length)))

        onView(withId(R.id.tvErrorPostCode))
            .check(matches(isDisplayed()))
            .check(matches(withText(R.string.post_code_length)))

        onView(withId(R.id.tvErrorCity))
            .check(matches(isDisplayed()))
            .check(matches(withText(R.string.city_name_length)))
    }

    @Test
    fun duplicateCompanyFails() {

        openFragment()

        // assume company exists
        val dummyCompanyName = "Google123"
        insertDummyCompany(dummyCompanyName)

        // try to create company with same name:

        // type valid company name
        onView(withId(R.id.etCompanyName))
            .perform(scrollTo(), typeText(dummyCompanyName))

        // type valid company position
        onView(withId(R.id.etCompanyPosition))
            .perform(scrollTo(), typeText("CEO"))

        // type valid postal code
        onView(withId(R.id.etPostCode))
            .perform(scrollTo(), typeText("8010"))

        // type valid city
        onView(withId(R.id.etCity))
            .perform(scrollTo(), typeText("Graz"))

        // type valid Street
        onView(withId(R.id.etStreet))
            .perform(scrollTo(), typeText("Street 1"))

        closeSoftKeyboard()

        // Click registration button
        val btn = withId(R.id.btnCreateCompany)
        onView(btn).perform(scrollTo(), click())

        // check if correct error is displayed
        onView(withId(R.id.tvErrorCompanyName))
            .check(matches(isDisplayed()))
            .check(matches(withText(R.string.error_company_exists)))
    }

    @Test
    fun validInputData() {
        openFragment()

        val dummyCompanyName = "Google4565"

        // type valid company name
        onView(withId(R.id.etCompanyName))
            .perform(scrollTo(), typeText(dummyCompanyName))

        // type valid company position
        onView(withId(R.id.etCompanyPosition))
            .perform(scrollTo(), typeText("CEO"))

        // type valid postal code
        onView(withId(R.id.etPostCode))
            .perform(scrollTo(), typeText("8010"))

        // type valid city
        onView(withId(R.id.etCity))
            .perform(scrollTo(), typeText("Graz"))

        // type valid Street
        onView(withId(R.id.etStreet))
            .perform(scrollTo(), typeText("Street 1"))

        closeSoftKeyboard()
        Thread.sleep(1000)

        // Click registration button
        val btn = withId(R.id.btnCreateCompany)
        onView(btn).perform(scrollTo(), click())

        // check if company was correctly created and assigned
        assert(MyApplication.loggedInWorker!!.admin)
        val company = MyApplication.loggedInWorker!!.company
        assert(company != null)
        assert(MyApplication.loggedInWorker!!.company!!.name == dummyCompanyName)
    }

}